added all the content

--- a/about.html
+++ b/about.html
@@ -58,13 +58,7 @@
                                 </nav>
                             </div>
                         </div>
-                        <div class="col-xl-3 col-lg-3">
-                            <div class="quote-area">
-                                <div class="get-quote d-none d-lg-block">
-                                    <a class="boxed-btn" href="#">Get a quote</a>
-                                </div>
-                            </div>
-                        </div>
+
                         <div class="col-12">
                             <div class="mobile_menu d-block d-lg-none"></div>
                         </div>
@@ -101,48 +95,36 @@
     </section>
     <!-- breadcrumb-end -->
 
+<!-- Start Sample Area -->
+	<section class="sample-text-area">
+		<div class="container box_1170">
+			<h3 class="text-heading">How it started</h3>
+			<p class="sample-text">
+Mr. Ramesh Kumar, Mechanical Draughtsmen having 28 years of rich
+experience in product development, large scale production and industrial
+management &amp; always strived towards customer satisfaction by providing
+quality product and on time delivery always.<br/><br/>
+Sai Precision Industries was started by Ramesh Kumar B.N in head office in
+Silicon City Bangalore in the year 2013 with a vision to make his firm known for
+its “Quality and Deliverable”.<br/><br/>
+Mr. Shashank B R, an Engineering Graduate having 4 years of experience in
+software and production line, quality control, engineering applications joined
+Sai Precision Industries as Partner to support other functions of the organization
+which includes Commercial activities, Documentation, Statutory obligations,
+Product development, &amp; continual improvement of the organization.<br/><br/>
+Sai Precision Industries after due &amp; stringent process and evaluation registered
+as Channel Partners for Ashirvad Pipes Private Limited in the year 2013 for
+supply of precision bore well accessories.<br/><br/>
+With the support from Dedicated, Experienced team we are able to achieve the
+Quality &amp; timely deliverables as per client expectations always. We believe in
+continual improvement programmes and all the team members are provided
+periodical on the job trainings by subject experts to align every individual in
+achieving organization goals &amp; growth of our organization.
 
-    <!-- counter-start -->
-    <div class="counter-area gray-bg">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-4 col-md-4">
-                    <div class="single-counter">
-                        <div class="icon">
-                            <img src="img/icon/conunter-icon.png" alt="">
-                        </div>
-                        <div class="counter-number">
-                            <h3><span class="counter">400</span><span>+</span></h3>
-                            <p>Business <span>Completed</span> </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-4 col-md-4">
-                    <div class="single-counter">
-                        <div class="icon">
-                            <img src="img/icon/conunter-icon2.png" alt="">
-                        </div>
-                        <div class="counter-number">
-                            <h3><span class="counter">30</span><span>+</span></h3>
-                            <p><span>Dedicated team</span> Business</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-4 col-md-4">
-                    <div class="single-counter">
-                        <div class="icon">
-                            <img src="img/icon/conunter-icon3.png" alt="">
-                        </div>
-                        <div class="counter-number">
-                            <h3><span class="counter">350</span><span>+</span></h3>
-                            <p>Positive <span>review</span></p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- counter-start -->
+			</p>
+		</div>
+	</section>
+	<!-- End Sample Area -->
 
     <!-- about start -->
     <div class="about-area section-padding">
@@ -150,210 +132,17 @@
             <div class="row align-items-center">
                 <div class="col-xl-5 col-md-12 col-lg-6">
                     <div class="section-title mb-65 p-0">
-                        <span>About Company</span>
+                        <span>Shashank B R</span>
                         <h3>Deliver inovative
                             Industrial solution</h3>
                         <p class="para-text">
-                            Waters makte fish every without firmament saw had. Morning air subdue very one. Whales grass
-                            is fish whales winged.
+                            Shashank is a millennial who moved to industrial product marketing because of his interest in machines and passion for marketing. 
                         </p>
                     </div>
                 </div>
                 <div class="col-xl-7 col-md-12 col-lg-6">
                     <div class="about-thumb">
                         <img src="img/about/bols.jpg" alt="">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- about end -->
-
-    <!-- team-start -->
-    <div class="team-area section-padding gray-bg">
-        <div class="container">
-            <div class="row align-items-center justify-content-center">
-                <div class="section-title text-center mb-65">
-                    <span>OUR INDUSTRIAL EXPERTS</span>
-                    <h3>Meet with our Industrial experts</h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xl-4 col-lg-4 col-md-6">
-                    <div class="single-team">
-                        <div class="team-thumb">
-                            <img src="img/team/2.jpg" alt="">
-                            <div class="team-hover">
-                                <div class="team-link">
-                                    <ul>
-                                        <li><a href="#"> <i class="fa fa-facebook"></i> </a></li>
-                                        <li><a href="#"> <i class="fa fa-twitter"></i> </a></li>
-                                        <li><a href="#"> <i class="fa fa-linkedin"></i> </a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="team-info text-center">
-                            <h3>Kamal Dowlat</h3>
-                            <p>Industrial engineer</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-4 col-lg-4 col-md-6">
-                    <div class="single-team">
-                        <div class="team-thumb">
-                            <img src="img/team/3.jpg" alt="">
-                            <div class="team-hover">
-                                <div class="team-link">
-                                    <ul>
-                                        <li><a href="#"> <i class="fa fa-facebook"></i> </a></li>
-                                        <li><a href="#"> <i class="fa fa-twitter"></i> </a></li>
-                                        <li><a href="#"> <i class="fa fa-linkedin"></i> </a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="team-info text-center">
-                            <h3>Miller Jonson</h3>
-                            <p>Industrial engineer</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-4 col-lg-4 col-md-6">
-                    <div class="single-team">
-                        <div class="team-thumb">
-                            <img src="img/team/4.jpg" alt="">
-                            <div class="team-hover">
-                                <div class="team-link">
-                                    <ul>
-                                        <li><a href="#"> <i class="fa fa-facebook"></i> </a></li>
-                                        <li><a href="#"> <i class="fa fa-twitter"></i> </a></li>
-                                        <li><a href="#"> <i class="fa fa-linkedin"></i> </a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="team-info text-center">
-                            <h3>Aristetol Smith</h3>
-                            <p>Industrial engineer</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- team-end -->
-
-    <!-- about start -->
-    <div class="about-area section-padding">
-        <div class="container">
-            <div class="about-pro-active owl-carousel">
-                <div class="row align-items-center">
-                    <div class="col-xl-6 col-md-6 col-lg-6 ">
-                        <div class="about-info-text">
-                            <div class="quote">
-                                <i class="Flaticon flaticon-quote"></i>
-                            </div>
-                            <div class="about-ratting">
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                            </div>
-                            <p class="about-text">Waters make fish every without firmament saw had. Morning air subdue
-                                very one. Whales grass is fish whales winged.</p>
-                            <div class="about-author">
-                                <div class="autor-thumb">
-                                    <img src="img/about/about-author.jpg" alt="">
-                                </div>
-                                <div class="auhor-text">
-                                    <span>Jon Snow</span>
-                                    <p>Business ownner</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-5 offset-xl-1 col-md-6">
-                        <div class="about-review">
-                            <img src="img/about/about-project.jpg" alt="">
-                            <div class="project-review">
-                                <h3>350+</h3>
-                                <p>Positive review</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row  align-items-center">
-                    <div class="col-xl-6 col-md-6">
-                        <div class="about-info-text">
-                            <div class="quote">
-                                <i class="Flaticon flaticon-quote"></i>
-                            </div>
-                            <div class="about-ratting">
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                            </div>
-                            <p class="about-text">Waters make fish every without firmament saw had. Morning air subdue
-                                very one. Whales grass is fish whales winged.</p>
-                            <div class="about-author">
-                                <div class="autor-thumb">
-                                    <img src="img/about/about-author.jpg" alt="">
-                                </div>
-                                <div class="auhor-text">
-                                    <span>Jon Snow</span>
-                                    <p>Business ownner</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-5 offset-xl-1 col-md-6">
-                        <div class="about-review">
-                            <img src="img/about/about-project.jpg" alt="">
-                            <div class="project-review">
-                                <h3>350+</h3>
-                                <p>Positive review</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row align-items-center">
-                    <div class="col-xl-6 col-md-6">
-                        <div class="about-info-text">
-                            <div class="quote">
-                                <i class="Flaticon flaticon-quote"></i>
-                            </div>
-                            <div class="about-ratting">
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                            </div>
-                            <p class="about-text">Waters make fish every without firmament saw had. Morning air subdue
-                                very one. Whales grass is fish whales winged.</p>
-                            <div class="about-author">
-                                <div class="autor-thumb">
-                                    <img src="img/about/about-author.jpg" alt="">
-                                </div>
-                                <div class="auhor-text">
-                                    <span>Jon Snow</span>
-                                    <p>Business ownner</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-5 offset-xl-1 col-md-6">
-                        <div class="about-review">
-                            <img src="img/about/about-project.jpg" alt="">
-                            <div class="project-review">
-                                <h3>350+</h3>
-                                <p>Positive review</p>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
