--- a/index.html
+++ b/index.html
@@ -58,13 +58,7 @@
                                 </nav>
                             </div>
                         </div>
-                        <div class="col-xl-3 col-lg-3">
-                            <div class="quote-area">
-                                <div class="get-quote d-none d-lg-block">
-                                    <a class="boxed-btn" href="contact.html">Get a quote</a>
-                                </div>
-                            </div>
-                        </div>
+
                         <div class="col-12">
                             <div class="mobile_menu d-block d-lg-none"></div>
                         </div>
@@ -94,10 +88,6 @@
                             <div class="slider-content">
                                 <p>Quality work. Trustable service. Dedicated team</p>
                                 <h3>We provide your Industrial solution</h3>
-                                <div class="slider-btn">
-                                    <a class="boxed-btn2" href="#">Our Services <i
-                                            class="Flaticon flaticon-right-arrow"></i></a>
-                                </div>
                             </div>
                         </div>
                     </div>
@@ -110,10 +100,6 @@
                             <div class="slider-content">
                                 <p>Quality work. Trustable service. Dedicated team</p>
                                 <h3>We provide your Industrial solution</h3>
-                                <div class="slider-btn">
-                                    <a class="boxed-btn2" href="#">Our Services <i
-                                            class="Flaticon flaticon-right-arrow"></i></a>
-                                </div>
                             </div>
                         </div>
                     </div>
@@ -126,10 +112,6 @@
                             <div class="slider-content">
                                 <p>Quality work. Trustable service. Dedicated team</p>
                                 <h3>We provide your Industrial solution</h3>
-                                <div class="slider-btn">
-                                    <a class="boxed-btn2" href="#">Our Services <i
-                                            class="Flaticon flaticon-right-arrow"></i></a>
-                                </div>
                             </div>
                         </div>
                     </div>
@@ -173,22 +155,35 @@
     </div>
     <!-- brand-area-end -->
 
-    <!-- service-area-start -->
-    <div class="service-area">
+    <!-- full-width-gallery start -->
+    <div class="full-width-gallery">
         <div class="container">
-            <div class="row align-items-center justify-content-center">
-                <div class="section-title text-center mb-65">
-                    <span>OUR SERVICES</span>
-                    <h3>We provide all of your <br>
-                        industrial solution</h3>
-                </div>
-            </div>
             <div class="row">
-                
+                <div class="col-xl-12">
+                    <div class="full-thumb">
+                    </div>
+                </div>
+                <div class="col-xl-6 col-md-6">
+                    <div class="solution-wrap">
+                        <h2>Vision</h2>
+                        <p>To be the first choice among customers PAN INDIA by providing end to end product solutions<br/>
+							Create safe and healthy working atmosphere and empower team<br/>
+							Csutomer delight is our motto </p>
+                    </div>
+                </div>
+                <div class="col-xl-6 col-md-6">
+                    <div class="solution-wrap">
+                        <h2>Mission</h2>
+                        <p> Innovate methods and systems<br/>
+							Upgerade ourselves with the latest technology<br/>
+							Transperancy and honesty in out business<br/>
+							Courtesy towards our employees and channel partners </p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-    <!-- service-area-end -->
+    <!-- full-width-gallery-end -->
 
     <!-- location-area-start -->
     <div class="addres-area black-bg section-padding">
