--- a/policies.html
+++ b/policies.html
@@ -58,13 +58,7 @@
                                 </nav>
                             </div>
                         </div>
-                        <div class="col-xl-3 col-lg-3">
-                            <div class="quote-area">
-                                <div class="get-quote d-none d-lg-block">
-                                    <a class="boxed-btn" href="#">Get a quote</a>
-                                </div>
-                            </div>
-                        </div>
+
                         <div class="col-12">
                             <div class="mobile_menu d-block d-lg-none"></div>
                         </div>
@@ -101,266 +95,41 @@
     </section>
     <!-- breadcrumb-end -->
 
+<!-- Start Sample Area -->
+	<section class="sample-text-area">
+		<div class="container box_1170">
+			<h3 class="text-heading">Quality Policy</h3>
+			<p class="sample-text">
+At “Sai Precision Industry” we believe in understanding our customer needs & expectations and constantly looking at ways of improving the quality of our products and deliverables. This also prompted us to structure our quality systems to suit the requirements of the international standards with better understanding that this will be another step towards providing quality products to our customers. We at Sai Precision Industry believe in continual improvement program & has established quality objectives which are reviewed periodically by improving our work methods, upgrading our standard operating procedures, create safe & healthy work environment & upgrading skills of each employee time to time. This quality policy will be reviewed periodically to ensure it remains relevant and appropriate to the changing needs of the organization. All employees are made part of this quality system and suggest ways of enhancing quality and efficiency. Customer delight is our motto.
 
-    <!-- counter-start -->
-    <div class="counter-area gray-bg">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-4 col-md-4">
-                    <div class="single-counter">
-                        <div class="icon">
-                            <img src="img/icon/conunter-icon.png" alt="">
-                        </div>
-                        <div class="counter-number">
-                            <h3><span class="counter">400</span><span>+</span></h3>
-                            <p>Business <span>Completed</span> </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-4 col-md-4">
-                    <div class="single-counter">
-                        <div class="icon">
-                            <img src="img/icon/conunter-icon2.png" alt="">
-                        </div>
-                        <div class="counter-number">
-                            <h3><span class="counter">30</span><span>+</span></h3>
-                            <p><span>Dedicated team</span> Business</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-4 col-md-4">
-                    <div class="single-counter">
-                        <div class="icon">
-                            <img src="img/icon/conunter-icon3.png" alt="">
-                        </div>
-                        <div class="counter-number">
-                            <h3><span class="counter">350</span><span>+</span></h3>
-                            <p>Positive <span>review</span></p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- counter-start -->
+			</p>
+			<br/> <br/>
+						<h3 class="text-heading">Safety Policy</h3>
+			<p class="sample-text">
+We Sai Precision Industry engaged in manufacturing of engineering
+components committed to continually improve safety in all areas
+of operation by effective safe working practices and healthy
+atmosphere to achieve safe and reliable working environment. We
+will strive our efforts to promote safety consciousness among all
+our employees.
 
-    <!-- about start -->
-    <div class="about-area section-padding">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-xl-5 col-md-12 col-lg-6">
-                    <div class="section-title mb-65 p-0">
-                        <span>About Company</span>
-                        <h3>Deliver inovative
-                            Industrial solution</h3>
-                        <p class="para-text">
-                            Waters makte fish every without firmament saw had. Morning air subdue very one. Whales grass
-                            is fish whales winged.
-                        </p>
-                    </div>
-                </div>
-                <div class="col-xl-7 col-md-12 col-lg-6">
-                    <div class="about-thumb">
-                        <img src="img/about/bols.jpg" alt="">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- about end -->
+Our objective is to create clean, safety and healthy workplace for all
+our employees to work productively.
 
-    <!-- team-start -->
-    <div class="team-area section-padding gray-bg">
-        <div class="container">
-            <div class="row align-items-center justify-content-center">
-                <div class="section-title text-center mb-65">
-                    <span>OUR INDUSTRIAL EXPERTS</span>
-                    <h3>Meet with our Industrial experts</h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xl-4 col-lg-4 col-md-6">
-                    <div class="single-team">
-                        <div class="team-thumb">
-                            <img src="img/team/2.jpg" alt="">
-                            <div class="team-hover">
-                                <div class="team-link">
-                                    <ul>
-                                        <li><a href="#"> <i class="fa fa-facebook"></i> </a></li>
-                                        <li><a href="#"> <i class="fa fa-twitter"></i> </a></li>
-                                        <li><a href="#"> <i class="fa fa-linkedin"></i> </a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="team-info text-center">
-                            <h3>Kamal Dowlat</h3>
-                            <p>Industrial engineer</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-4 col-lg-4 col-md-6">
-                    <div class="single-team">
-                        <div class="team-thumb">
-                            <img src="img/team/3.jpg" alt="">
-                            <div class="team-hover">
-                                <div class="team-link">
-                                    <ul>
-                                        <li><a href="#"> <i class="fa fa-facebook"></i> </a></li>
-                                        <li><a href="#"> <i class="fa fa-twitter"></i> </a></li>
-                                        <li><a href="#"> <i class="fa fa-linkedin"></i> </a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="team-info text-center">
-                            <h3>Miller Jonson</h3>
-                            <p>Industrial engineer</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-4 col-lg-4 col-md-6">
-                    <div class="single-team">
-                        <div class="team-thumb">
-                            <img src="img/team/4.jpg" alt="">
-                            <div class="team-hover">
-                                <div class="team-link">
-                                    <ul>
-                                        <li><a href="#"> <i class="fa fa-facebook"></i> </a></li>
-                                        <li><a href="#"> <i class="fa fa-twitter"></i> </a></li>
-                                        <li><a href="#"> <i class="fa fa-linkedin"></i> </a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="team-info text-center">
-                            <h3>Aristetol Smith</h3>
-                            <p>Industrial engineer</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- team-end -->
+We provide necessary knowledge to all our employees for enhanced
+safety conscious periodically.
 
-    <!-- about start -->
-    <div class="about-area section-padding">
-        <div class="container">
-            <div class="about-pro-active owl-carousel">
-                <div class="row align-items-center">
-                    <div class="col-xl-6 col-md-6 col-lg-6 ">
-                        <div class="about-info-text">
-                            <div class="quote">
-                                <i class="Flaticon flaticon-quote"></i>
-                            </div>
-                            <div class="about-ratting">
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                            </div>
-                            <p class="about-text">Waters make fish every without firmament saw had. Morning air subdue
-                                very one. Whales grass is fish whales winged.</p>
-                            <div class="about-author">
-                                <div class="autor-thumb">
-                                    <img src="img/about/about-author.jpg" alt="">
-                                </div>
-                                <div class="auhor-text">
-                                    <span>Jon Snow</span>
-                                    <p>Business ownner</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-5 offset-xl-1 col-md-6">
-                        <div class="about-review">
-                            <img src="img/about/about-project.jpg" alt="">
-                            <div class="project-review">
-                                <h3>350+</h3>
-                                <p>Positive review</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row  align-items-center">
-                    <div class="col-xl-6 col-md-6">
-                        <div class="about-info-text">
-                            <div class="quote">
-                                <i class="Flaticon flaticon-quote"></i>
-                            </div>
-                            <div class="about-ratting">
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                            </div>
-                            <p class="about-text">Waters make fish every without firmament saw had. Morning air subdue
-                                very one. Whales grass is fish whales winged.</p>
-                            <div class="about-author">
-                                <div class="autor-thumb">
-                                    <img src="img/about/about-author.jpg" alt="">
-                                </div>
-                                <div class="auhor-text">
-                                    <span>Jon Snow</span>
-                                    <p>Business ownner</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-5 offset-xl-1 col-md-6">
-                        <div class="about-review">
-                            <img src="img/about/about-project.jpg" alt="">
-                            <div class="project-review">
-                                <h3>350+</h3>
-                                <p>Positive review</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row align-items-center">
-                    <div class="col-xl-6 col-md-6">
-                        <div class="about-info-text">
-                            <div class="quote">
-                                <i class="Flaticon flaticon-quote"></i>
-                            </div>
-                            <div class="about-ratting">
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                            </div>
-                            <p class="about-text">Waters make fish every without firmament saw had. Morning air subdue
-                                very one. Whales grass is fish whales winged.</p>
-                            <div class="about-author">
-                                <div class="autor-thumb">
-                                    <img src="img/about/about-author.jpg" alt="">
-                                </div>
-                                <div class="auhor-text">
-                                    <span>Jon Snow</span>
-                                    <p>Business ownner</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-5 offset-xl-1 col-md-6">
-                        <div class="about-review">
-                            <img src="img/about/about-project.jpg" alt="">
-                            <div class="project-review">
-                                <h3>350+</h3>
-                                <p>Positive review</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- about end -->
+We will achieve safe and healthy workplace through all employee
+participation.
+Safety begins with teamwork and will be our first choice.
 
+
+			</p>
+		</div>
+	</section>
+	<!-- End Sample Area -->
+	
+	
       <!-- location-area-start -->
     <div class="addres-area black-bg section-padding">
         <div class="container">
