--- a/certificates.html
+++ b/certificates.html
@@ -58,13 +58,7 @@
                                 </nav>
                             </div>
                         </div>
-                        <div class="col-xl-3 col-lg-3">
-                            <div class="quote-area">
-                                <div class="get-quote d-none d-lg-block">
-                                    <a class="boxed-btn" href="#">Get a quote</a>
-                                </div>
-                            </div>
-                        </div>
+
                         <div class="col-12">
                             <div class="mobile_menu d-block d-lg-none"></div>
                         </div>
@@ -99,52 +93,23 @@
         </div>
     </section>
     <!-- breadcrumb-end -->
-
-    <!-- service-area-start -->
-    <div class="service-area">
-        <div class="container">
-            <div class="row align-items-center justify-content-center">
-                <div class="section-title text-center mb-65">
-                    <span>OUR SERVICES</span>
-                    <h3>We provide all of your <br>
-                        industrial solution</h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xl-4 col-md-4">
-                    <div class="single-service">
-                        <div class="service-thumb">
-                            <img src="img/service/1.jpg" alt="">
-                        </div>
-                        <h3>Industrial construction</h3>
-                        <p>Waters make fish every without firmament saw had. Morning air subdue.</p>
-                        <a href="#" class="read-more">Read More</a>
-                    </div>
-                </div>
-                <div class="col-xl-4 col-md-4">
-                    <div class="single-service">
-                        <div class="service-thumb">
-                            <img src="img/service/2.jpg" alt="">
-                        </div>
-                        <h3>Mechanical engineering</h3>
-                        <p>Waters make fish every without firmament saw had. Morning air subdue.</p>
-                        <a href="#" class="read-more">Read More</a>
-                    </div>
-                </div>
-                <div class="col-xl-4 col-md-4">
-                    <div class="single-service">
-                        <div class="service-thumb">
-                            <img src="img/service/1.jpg" alt="">
-                        </div>
-                        <h3>Bridge construction</h3>
-                        <p>Waters make fish every without firmament saw had. Morning air subdue.</p>
-                        <a href="#" class="read-more">Read More</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- service-area-end -->
+	
+		<!-- Start Sample Area -->
+	<section class="sample-text-area">
+		<div class="container box_1170">
+			<h3 class="text-heading">MSME Certificate</h3>
+			<p class="sample-text">
+In the year 2016-17, Sai Precision Industries got MSME certificate from KSSIDC, A
+government of Karnataka Undertaking.
+			</p> <br/> <br/>
+			<h3 class="text-heading">ISO 9000-2015 Certificate</h3>
+			<p class="sample-text">
+We were awarded ISO 9000-2015 certification for supply of high quality
+products in line with effective Process &amp; Systems in line with our client.
+			</p>
+		</div>
+	</section>
+	<!-- End Sample Area -->
 
 <!-- location-area-start -->
     <div class="addres-area black-bg section-padding">
